# ex1b

./: README.md
client/: CMakeLists.txt  main.cpp
client/inc/: Client.h  Mainwindow.h  Man.h  Secure.h  Stru.h  client.h
client/src/: client.cpp  mainwindow.cpp  man.cpp  secure.cpp  stru.cpp
download/: 文本文件
local/: text.docx  text_2.csv  文本文件
server/: CMakeLists.txt  main.cpp
server/inc/: Mainwindow.h  Method.h  Secure.h  Server.h  Sett.h  Stru.h
server/src/: mainwindow.cpp  method.cpp  secure.cpp  server.cpp  sett.cpp  stru.cpp  text  text.cpp
serverdata/1/: text.csv  text.docx
serverdata/wxq/: aes256_text.docx  text.csv  text.docx
素材/: text.csv  text_1.csv
